// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createPipeline create file pipe 1`] = `
Array [
  "filesrc",
  "test-src=true",
  "location=/transco/mm.mkv",
  "!",
  "matroskademux",
  "name=demuxer",
  "mp4mux",
  "fragment-duration=10",
  "name=480",
  "!",
  "filesink",
  "filetest=true",
  "location=/transco/test/480.mp4",
  "mp4mux",
  "fragment-duration=10",
  "name=720",
  "!",
  "filesink",
  "filetest=true",
  "location=/transco/test/720.mp4",
  "mp4mux",
  "fragment-duration=10",
  "name=1080",
  "!",
  "filesink",
  "filetest=true",
  "location=/transco/test/1080.mp4",
  "demuxer.video_0",
  "!",
  "h264parse",
  "!",
  "queue",
  "max-size-bytes=512000000",
  "!",
  "avdec_h264",
  "!",
  "progressreport",
  "name=update_video_0",
  "update-freq=1",
  "!",
  "tee",
  "name=video_0",
  "video_0.",
  "!",
  "queue",
  "max-size-bytes=512000000",
  "!",
  "videoconvert",
  "!",
  "videoscale",
  "!",
  "video/x-raw,height=480,width=878",
  "!",
  "nvh264enc",
  "preset=2",
  "bitrate=256",
  "gop-size=50",
  "!",
  "h264parse",
  "pts-interpolation=true",
  "!",
  "queue",
  "max-size-bytes=512000000",
  "!",
  "480.",
  "video_0.",
  "!",
  "queue",
  "max-size-bytes=512000000",
  "!",
  "videoconvert",
  "!",
  "videoscale",
  "!",
  "video/x-raw,height=720,width=1316",
  "!",
  "nvh264enc",
  "preset=2",
  "bitrate=512",
  "gop-size=50",
  "!",
  "h264parse",
  "pts-interpolation=true",
  "!",
  "queue",
  "max-size-bytes=512000000",
  "!",
  "720.",
  "video_0.",
  "!",
  "queue",
  "max-size-bytes=512000000",
  "!",
  "videoconvert",
  "!",
  "videoscale",
  "!",
  "video/x-raw,height=1050,width=1920",
  "!",
  "x264enc",
  "bframes=50",
  "bitrate=1024",
  "speed-preset=7",
  "!",
  "h264parse",
  "pts-interpolation=true",
  "!",
  "queue",
  "max-size-bytes=512000000",
  "!",
  "1080.",
  "demuxer.audio_0",
  "!",
  "ac3parse",
  "!",
  "queue",
  "max-size-bytes=512000000",
  "!",
  "avdec_eac3",
  "!",
  "progressreport",
  "name=update_audio_1",
  "update-freq=1",
  "!",
  "tee",
  "name=audio_1",
  "audio_1.",
  "!",
  "queue",
  "max-size-bytes=512000000",
  "!",
  "audioconvert",
  "!",
  "audio/x-raw,channels=2",
  "!",
  "faac",
  "bitrate=64",
  "!",
  "queue",
  "max-size-bytes=512000000",
  "!",
  "480.",
  "audio_1.",
  "!",
  "queue",
  "max-size-bytes=512000000",
  "!",
  "audioconvert",
  "!",
  "audio/x-raw,channels=2",
  "!",
  "faac",
  "bitrate=92",
  "!",
  "queue",
  "max-size-bytes=512000000",
  "!",
  "720.",
  "audio_1.",
  "!",
  "queue",
  "max-size-bytes=512000000",
  "!",
  "audioconvert",
  "!",
  "audio/x-raw,channels=2",
  "!",
  "faac",
  "bitrate=128",
  "!",
  "queue",
  "max-size-bytes=512000000",
  "!",
  "1080.",
  "demuxer.subtitle_0",
  "!",
  "webvttenc",
  "!",
  "queue",
  "max-size-bytes=512000000",
  "!",
  "filesink",
  "filetest=true",
  "location=/transco/test/sub-0",
  "demuxer.subtitle_1",
  "!",
  "webvttenc",
  "!",
  "queue",
  "max-size-bytes=512000000",
  "!",
  "filesink",
  "filetest=true",
  "location=/transco/test/sub-1",
  "demuxer.subtitle_2",
  "!",
  "webvttenc",
  "!",
  "queue",
  "max-size-bytes=512000000",
  "!",
  "filesink",
  "filetest=true",
  "location=/transco/test/sub-2",
  "demuxer.subtitle_3",
  "!",
  "webvttenc",
  "!",
  "queue",
  "max-size-bytes=512000000",
  "!",
  "filesink",
  "filetest=true",
  "location=/transco/test/sub-3",
  "demuxer.audio_1",
  "!",
  "ac3parse",
  "!",
  "queue",
  "max-size-bytes=512000000",
  "!",
  "a52dec",
  "!",
  "progressreport",
  "name=update_audio_6",
  "update-freq=1",
  "!",
  "tee",
  "name=audio_6",
  "audio_6.",
  "!",
  "queue",
  "max-size-bytes=512000000",
  "!",
  "audioconvert",
  "!",
  "audio/x-raw,channels=2",
  "!",
  "faac",
  "bitrate=64",
  "!",
  "queue",
  "max-size-bytes=512000000",
  "!",
  "480.",
  "audio_6.",
  "!",
  "queue",
  "max-size-bytes=512000000",
  "!",
  "audioconvert",
  "!",
  "audio/x-raw,channels=2",
  "!",
  "faac",
  "bitrate=92",
  "!",
  "queue",
  "max-size-bytes=512000000",
  "!",
  "720.",
  "audio_6.",
  "!",
  "queue",
  "max-size-bytes=512000000",
  "!",
  "audioconvert",
  "!",
  "audio/x-raw,channels=2",
  "!",
  "faac",
  "bitrate=128",
  "!",
  "queue",
  "max-size-bytes=512000000",
  "!",
  "1080.",
]
`;

exports[`createPipeline create file pipe 2`] = `
Object {
  "1080": Object {
    "location": "/transco/test/1080.mp4",
    "name": "1080.mp4",
    "preset": "1080",
    "streams": Array [
      Object {
        "bitrate": 7074423,
        "codec": Object {
          "alignment": "au",
          "bit-depth-chroma": 8,
          "bit-depth-luma": 8,
          "chroma-format": "4:2:0",
          "codec_data": Object {
            "data": Array [
              1,
              100,
              0,
              40,
              255,
              225,
              0,
              42,
              103,
              100,
              0,
              40,
              172,
              217,
              64,
              120,
              2,
              39,
              229,
              192,
              90,
              128,
              128,
              128,
              160,
              0,
              0,
              125,
              32,
              0,
              23,
              112,
              28,
              64,
              0,
              2,
              98,
              90,
              0,
              0,
              29,
              205,
              101,
              209,
              70,
              0,
              241,
              131,
              25,
              96,
              1,
              0,
              5,
              104,
              233,
              59,
              60,
              143,
            ],
            "type": "Buffer",
          },
          "framerate": Object {
            "denom": 1001,
            "num": 24000,
          },
          "height": 1050,
          "interlace-mode": "progressive",
          "level": "4",
          "parsed": true,
          "pixel-aspect-ratio": Object {
            "denom": 1,
            "num": 1,
          },
          "profile": "high",
          "stream-format": "avc",
          "type": "video/x-h264",
          "width": 1920,
        },
        "depth": 24,
        "framerate": Object {
          "denom": 1001,
          "num": 24000,
        },
        "height": 1050,
        "id": 1,
        "image": false,
        "interlaced": false,
        "maxBitrate": 0,
        "pixelAspectRatio": Object {
          "denom": 1,
          "num": 1,
        },
        "position": 0,
        "streamId": "2c86b72aabb58ab9e68832142d187988388cc0e21de517e2f84be2bdbb638306/001:14910503159376668675",
        "tags": Object {
          "bitrate": 7074423,
          "container format": "Matroska",
          "extended comment": "DURATION=01:58:49.122000000",
          "language code": "und",
          "video codec": "H264",
        },
        "type": "video",
        "width": 1920,
      },
      Object {
        "bitrate": 640000,
        "channels": 6,
        "codec": Object {
          "alignment": "frame",
          "channels": 6,
          "framed": true,
          "rate": 48000,
          "type": "audio/x-eac3",
        },
        "depth": 32,
        "id": 2,
        "language": "en",
        "maxBitrate": 0,
        "position": 0,
        "sampleRate": 48000,
        "streamId": "2c86b72aabb58ab9e68832142d187988388cc0e21de517e2f84be2bdbb638306/002:12895203282575461307",
        "tags": Object {
          "audio codec": "E-AC-3 audio",
          "bitrate": 640000,
          "container format": "Matroska",
          "extended comment": "DURATION=01:58:49.152000000",
          "language code": "en",
        },
        "type": "audio",
      },
      Object {
        "bitrate": 384000,
        "channels": 6,
        "codec": Object {
          "alignment": "frame",
          "channels": 6,
          "framed": true,
          "rate": 48000,
          "type": "audio/x-ac3",
        },
        "depth": 32,
        "id": 7,
        "language": "fr",
        "maxBitrate": 0,
        "position": 1,
        "sampleRate": 48000,
        "streamId": "2c86b72aabb58ab9e68832142d187988388cc0e21de517e2f84be2bdbb638306/007:714793849325566799",
        "tags": Object {
          "audio codec": "AC-3 audio",
          "bitrate": 384000,
          "container format": "Matroska",
          "extended comment": "DURATION=01:58:49.888000000",
          "language code": "fr",
        },
        "type": "audio",
      },
    ],
    "type": "container",
  },
  "480": Object {
    "location": "/transco/test/480.mp4",
    "name": "480.mp4",
    "preset": "480",
    "streams": Array [
      Object {
        "bitrate": 7074423,
        "codec": Object {
          "alignment": "au",
          "bit-depth-chroma": 8,
          "bit-depth-luma": 8,
          "chroma-format": "4:2:0",
          "codec_data": Object {
            "data": Array [
              1,
              100,
              0,
              40,
              255,
              225,
              0,
              42,
              103,
              100,
              0,
              40,
              172,
              217,
              64,
              120,
              2,
              39,
              229,
              192,
              90,
              128,
              128,
              128,
              160,
              0,
              0,
              125,
              32,
              0,
              23,
              112,
              28,
              64,
              0,
              2,
              98,
              90,
              0,
              0,
              29,
              205,
              101,
              209,
              70,
              0,
              241,
              131,
              25,
              96,
              1,
              0,
              5,
              104,
              233,
              59,
              60,
              143,
            ],
            "type": "Buffer",
          },
          "framerate": Object {
            "denom": 1001,
            "num": 24000,
          },
          "height": 1050,
          "interlace-mode": "progressive",
          "level": "4",
          "parsed": true,
          "pixel-aspect-ratio": Object {
            "denom": 1,
            "num": 1,
          },
          "profile": "high",
          "stream-format": "avc",
          "type": "video/x-h264",
          "width": 1920,
        },
        "depth": 24,
        "framerate": Object {
          "denom": 1001,
          "num": 24000,
        },
        "height": 1050,
        "id": 1,
        "image": false,
        "interlaced": false,
        "maxBitrate": 0,
        "pixelAspectRatio": Object {
          "denom": 1,
          "num": 1,
        },
        "position": 0,
        "streamId": "2c86b72aabb58ab9e68832142d187988388cc0e21de517e2f84be2bdbb638306/001:14910503159376668675",
        "tags": Object {
          "bitrate": 7074423,
          "container format": "Matroska",
          "extended comment": "DURATION=01:58:49.122000000",
          "language code": "und",
          "video codec": "H264",
        },
        "type": "video",
        "width": 1920,
      },
      Object {
        "bitrate": 640000,
        "channels": 6,
        "codec": Object {
          "alignment": "frame",
          "channels": 6,
          "framed": true,
          "rate": 48000,
          "type": "audio/x-eac3",
        },
        "depth": 32,
        "id": 2,
        "language": "en",
        "maxBitrate": 0,
        "position": 0,
        "sampleRate": 48000,
        "streamId": "2c86b72aabb58ab9e68832142d187988388cc0e21de517e2f84be2bdbb638306/002:12895203282575461307",
        "tags": Object {
          "audio codec": "E-AC-3 audio",
          "bitrate": 640000,
          "container format": "Matroska",
          "extended comment": "DURATION=01:58:49.152000000",
          "language code": "en",
        },
        "type": "audio",
      },
      Object {
        "bitrate": 384000,
        "channels": 6,
        "codec": Object {
          "alignment": "frame",
          "channels": 6,
          "framed": true,
          "rate": 48000,
          "type": "audio/x-ac3",
        },
        "depth": 32,
        "id": 7,
        "language": "fr",
        "maxBitrate": 0,
        "position": 1,
        "sampleRate": 48000,
        "streamId": "2c86b72aabb58ab9e68832142d187988388cc0e21de517e2f84be2bdbb638306/007:714793849325566799",
        "tags": Object {
          "audio codec": "AC-3 audio",
          "bitrate": 384000,
          "container format": "Matroska",
          "extended comment": "DURATION=01:58:49.888000000",
          "language code": "fr",
        },
        "type": "audio",
      },
    ],
    "type": "container",
  },
  "720": Object {
    "location": "/transco/test/720.mp4",
    "name": "720.mp4",
    "preset": "720",
    "streams": Array [
      Object {
        "bitrate": 7074423,
        "codec": Object {
          "alignment": "au",
          "bit-depth-chroma": 8,
          "bit-depth-luma": 8,
          "chroma-format": "4:2:0",
          "codec_data": Object {
            "data": Array [
              1,
              100,
              0,
              40,
              255,
              225,
              0,
              42,
              103,
              100,
              0,
              40,
              172,
              217,
              64,
              120,
              2,
              39,
              229,
              192,
              90,
              128,
              128,
              128,
              160,
              0,
              0,
              125,
              32,
              0,
              23,
              112,
              28,
              64,
              0,
              2,
              98,
              90,
              0,
              0,
              29,
              205,
              101,
              209,
              70,
              0,
              241,
              131,
              25,
              96,
              1,
              0,
              5,
              104,
              233,
              59,
              60,
              143,
            ],
            "type": "Buffer",
          },
          "framerate": Object {
            "denom": 1001,
            "num": 24000,
          },
          "height": 1050,
          "interlace-mode": "progressive",
          "level": "4",
          "parsed": true,
          "pixel-aspect-ratio": Object {
            "denom": 1,
            "num": 1,
          },
          "profile": "high",
          "stream-format": "avc",
          "type": "video/x-h264",
          "width": 1920,
        },
        "depth": 24,
        "framerate": Object {
          "denom": 1001,
          "num": 24000,
        },
        "height": 1050,
        "id": 1,
        "image": false,
        "interlaced": false,
        "maxBitrate": 0,
        "pixelAspectRatio": Object {
          "denom": 1,
          "num": 1,
        },
        "position": 0,
        "streamId": "2c86b72aabb58ab9e68832142d187988388cc0e21de517e2f84be2bdbb638306/001:14910503159376668675",
        "tags": Object {
          "bitrate": 7074423,
          "container format": "Matroska",
          "extended comment": "DURATION=01:58:49.122000000",
          "language code": "und",
          "video codec": "H264",
        },
        "type": "video",
        "width": 1920,
      },
      Object {
        "bitrate": 640000,
        "channels": 6,
        "codec": Object {
          "alignment": "frame",
          "channels": 6,
          "framed": true,
          "rate": 48000,
          "type": "audio/x-eac3",
        },
        "depth": 32,
        "id": 2,
        "language": "en",
        "maxBitrate": 0,
        "position": 0,
        "sampleRate": 48000,
        "streamId": "2c86b72aabb58ab9e68832142d187988388cc0e21de517e2f84be2bdbb638306/002:12895203282575461307",
        "tags": Object {
          "audio codec": "E-AC-3 audio",
          "bitrate": 640000,
          "container format": "Matroska",
          "extended comment": "DURATION=01:58:49.152000000",
          "language code": "en",
        },
        "type": "audio",
      },
      Object {
        "bitrate": 384000,
        "channels": 6,
        "codec": Object {
          "alignment": "frame",
          "channels": 6,
          "framed": true,
          "rate": 48000,
          "type": "audio/x-ac3",
        },
        "depth": 32,
        "id": 7,
        "language": "fr",
        "maxBitrate": 0,
        "position": 1,
        "sampleRate": 48000,
        "streamId": "2c86b72aabb58ab9e68832142d187988388cc0e21de517e2f84be2bdbb638306/007:714793849325566799",
        "tags": Object {
          "audio codec": "AC-3 audio",
          "bitrate": 384000,
          "container format": "Matroska",
          "extended comment": "DURATION=01:58:49.888000000",
          "language code": "fr",
        },
        "type": "audio",
      },
    ],
    "type": "container",
  },
  "subtitles": Array [
    Object {
      "location": "/transco/test/sub-0",
      "name": "sub-0",
      "preset": "subtitles",
      "stream": Object {
        "codec": Object {
          "format": "pango-markup",
          "type": "text/x-raw",
        },
        "id": 3,
        "language": "en",
        "position": 0,
        "streamId": "2c86b72aabb58ab9e68832142d187988388cc0e21de517e2f84be2bdbb638306/003:3338445907915957057",
        "tags": Object {
          "container format": "Matroska",
          "language code": "en",
        },
        "type": "subtitles",
      },
      "type": "subtitles",
    },
    Object {
      "location": "/transco/test/sub-1",
      "name": "sub-1",
      "preset": "subtitles",
      "stream": Object {
        "codec": Object {
          "format": "pango-markup",
          "type": "text/x-raw",
        },
        "id": 4,
        "language": "en",
        "position": 1,
        "streamId": "2c86b72aabb58ab9e68832142d187988388cc0e21de517e2f84be2bdbb638306/004:11425696843242394066",
        "tags": Object {
          "container format": "Matroska",
          "language code": "en",
        },
        "type": "subtitles",
      },
      "type": "subtitles",
    },
    Object {
      "location": "/transco/test/sub-2",
      "name": "sub-2",
      "preset": "subtitles",
      "stream": Object {
        "codec": Object {
          "format": "pango-markup",
          "type": "text/x-raw",
        },
        "id": 5,
        "language": "fr",
        "position": 2,
        "streamId": "2c86b72aabb58ab9e68832142d187988388cc0e21de517e2f84be2bdbb638306/005:16093836354305151439",
        "tags": Object {
          "container format": "Matroska",
          "language code": "fr",
        },
        "type": "subtitles",
      },
      "type": "subtitles",
    },
    Object {
      "location": "/transco/test/sub-3",
      "name": "sub-3",
      "preset": "subtitles",
      "stream": Object {
        "codec": Object {
          "format": "pango-markup",
          "type": "text/x-raw",
        },
        "id": 6,
        "language": "fr",
        "position": 3,
        "streamId": "2c86b72aabb58ab9e68832142d187988388cc0e21de517e2f84be2bdbb638306/006:6273201014077715892",
        "tags": Object {
          "container format": "Matroska",
          "language code": "fr",
        },
        "type": "subtitles",
      },
      "type": "subtitles",
    },
  ],
}
`;

exports[`createPipeline create http pipe 1`] = `
Array [
  "souphttpsrc",
  "test-http-src=true",
  "location=http://test.com/mm.mkv",
  "!",
  "matroskademux",
  "name=demuxer",
  "mp4mux",
  "fragment-duration=10",
  "name=480",
  "!",
  "curlhttpsink",
  "sync=false",
  "test=true",
  "location=http://test.com/transco/test?type=container&preset=480&name=480.mp4",
  "mp4mux",
  "fragment-duration=10",
  "name=720",
  "!",
  "curlhttpsink",
  "sync=false",
  "test=true",
  "location=http://test.com/transco/test?type=container&preset=720&name=720.mp4",
  "mp4mux",
  "fragment-duration=10",
  "name=1080",
  "!",
  "curlhttpsink",
  "sync=false",
  "test=true",
  "location=http://test.com/transco/test?type=container&preset=1080&name=1080.mp4",
  "demuxer.video_0",
  "!",
  "h264parse",
  "!",
  "queue",
  "max-size-bytes=512000000",
  "!",
  "avdec_h264",
  "!",
  "progressreport",
  "name=update_video_0",
  "update-freq=1",
  "!",
  "tee",
  "name=video_0",
  "video_0.",
  "!",
  "queue",
  "max-size-bytes=512000000",
  "!",
  "videoconvert",
  "!",
  "videoscale",
  "!",
  "video/x-raw,height=480,width=878",
  "!",
  "nvh264enc",
  "preset=2",
  "bitrate=256",
  "gop-size=50",
  "!",
  "h264parse",
  "pts-interpolation=true",
  "!",
  "queue",
  "max-size-bytes=512000000",
  "!",
  "480.",
  "video_0.",
  "!",
  "queue",
  "max-size-bytes=512000000",
  "!",
  "videoconvert",
  "!",
  "videoscale",
  "!",
  "video/x-raw,height=720,width=1316",
  "!",
  "nvh264enc",
  "preset=2",
  "bitrate=512",
  "gop-size=50",
  "!",
  "h264parse",
  "pts-interpolation=true",
  "!",
  "queue",
  "max-size-bytes=512000000",
  "!",
  "720.",
  "video_0.",
  "!",
  "queue",
  "max-size-bytes=512000000",
  "!",
  "videoconvert",
  "!",
  "videoscale",
  "!",
  "video/x-raw,height=1050,width=1920",
  "!",
  "x264enc",
  "bframes=50",
  "bitrate=1024",
  "speed-preset=7",
  "!",
  "h264parse",
  "pts-interpolation=true",
  "!",
  "queue",
  "max-size-bytes=512000000",
  "!",
  "1080.",
  "demuxer.audio_0",
  "!",
  "ac3parse",
  "!",
  "queue",
  "max-size-bytes=512000000",
  "!",
  "avdec_eac3",
  "!",
  "progressreport",
  "name=update_audio_1",
  "update-freq=1",
  "!",
  "tee",
  "name=audio_1",
  "audio_1.",
  "!",
  "queue",
  "max-size-bytes=512000000",
  "!",
  "audioconvert",
  "!",
  "audio/x-raw,channels=2",
  "!",
  "faac",
  "bitrate=64",
  "!",
  "queue",
  "max-size-bytes=512000000",
  "!",
  "480.",
  "audio_1.",
  "!",
  "queue",
  "max-size-bytes=512000000",
  "!",
  "audioconvert",
  "!",
  "audio/x-raw,channels=2",
  "!",
  "faac",
  "bitrate=92",
  "!",
  "queue",
  "max-size-bytes=512000000",
  "!",
  "720.",
  "audio_1.",
  "!",
  "queue",
  "max-size-bytes=512000000",
  "!",
  "audioconvert",
  "!",
  "audio/x-raw,channels=2",
  "!",
  "faac",
  "bitrate=128",
  "!",
  "queue",
  "max-size-bytes=512000000",
  "!",
  "1080.",
  "demuxer.subtitle_0",
  "!",
  "webvttenc",
  "!",
  "queue",
  "max-size-bytes=512000000",
  "!",
  "curlhttpsink",
  "sync=false",
  "test=true",
  "location=http://test.com/transco/test?type=subtitles&preset=subtitles&name=sub-0",
  "demuxer.subtitle_1",
  "!",
  "webvttenc",
  "!",
  "queue",
  "max-size-bytes=512000000",
  "!",
  "curlhttpsink",
  "sync=false",
  "test=true",
  "location=http://test.com/transco/test?type=subtitles&preset=subtitles&name=sub-1",
  "demuxer.subtitle_2",
  "!",
  "webvttenc",
  "!",
  "queue",
  "max-size-bytes=512000000",
  "!",
  "curlhttpsink",
  "sync=false",
  "test=true",
  "location=http://test.com/transco/test?type=subtitles&preset=subtitles&name=sub-2",
  "demuxer.subtitle_3",
  "!",
  "webvttenc",
  "!",
  "queue",
  "max-size-bytes=512000000",
  "!",
  "curlhttpsink",
  "sync=false",
  "test=true",
  "location=http://test.com/transco/test?type=subtitles&preset=subtitles&name=sub-3",
  "demuxer.audio_1",
  "!",
  "ac3parse",
  "!",
  "queue",
  "max-size-bytes=512000000",
  "!",
  "a52dec",
  "!",
  "progressreport",
  "name=update_audio_6",
  "update-freq=1",
  "!",
  "tee",
  "name=audio_6",
  "audio_6.",
  "!",
  "queue",
  "max-size-bytes=512000000",
  "!",
  "audioconvert",
  "!",
  "audio/x-raw,channels=2",
  "!",
  "faac",
  "bitrate=64",
  "!",
  "queue",
  "max-size-bytes=512000000",
  "!",
  "480.",
  "audio_6.",
  "!",
  "queue",
  "max-size-bytes=512000000",
  "!",
  "audioconvert",
  "!",
  "audio/x-raw,channels=2",
  "!",
  "faac",
  "bitrate=92",
  "!",
  "queue",
  "max-size-bytes=512000000",
  "!",
  "720.",
  "audio_6.",
  "!",
  "queue",
  "max-size-bytes=512000000",
  "!",
  "audioconvert",
  "!",
  "audio/x-raw,channels=2",
  "!",
  "faac",
  "bitrate=128",
  "!",
  "queue",
  "max-size-bytes=512000000",
  "!",
  "1080.",
]
`;

exports[`createPipeline create http pipe 2`] = `
Object {
  "1080": Object {
    "location": "http://test.com/transco/test?type=container&preset=1080&name=1080.mp4",
    "name": "1080.mp4",
    "preset": "1080",
    "streams": Array [
      Object {
        "bitrate": 7074423,
        "codec": Object {
          "alignment": "au",
          "bit-depth-chroma": 8,
          "bit-depth-luma": 8,
          "chroma-format": "4:2:0",
          "codec_data": Object {
            "data": Array [
              1,
              100,
              0,
              40,
              255,
              225,
              0,
              42,
              103,
              100,
              0,
              40,
              172,
              217,
              64,
              120,
              2,
              39,
              229,
              192,
              90,
              128,
              128,
              128,
              160,
              0,
              0,
              125,
              32,
              0,
              23,
              112,
              28,
              64,
              0,
              2,
              98,
              90,
              0,
              0,
              29,
              205,
              101,
              209,
              70,
              0,
              241,
              131,
              25,
              96,
              1,
              0,
              5,
              104,
              233,
              59,
              60,
              143,
            ],
            "type": "Buffer",
          },
          "framerate": Object {
            "denom": 1001,
            "num": 24000,
          },
          "height": 1050,
          "interlace-mode": "progressive",
          "level": "4",
          "parsed": true,
          "pixel-aspect-ratio": Object {
            "denom": 1,
            "num": 1,
          },
          "profile": "high",
          "stream-format": "avc",
          "type": "video/x-h264",
          "width": 1920,
        },
        "depth": 24,
        "framerate": Object {
          "denom": 1001,
          "num": 24000,
        },
        "height": 1050,
        "id": 1,
        "image": false,
        "interlaced": false,
        "maxBitrate": 0,
        "pixelAspectRatio": Object {
          "denom": 1,
          "num": 1,
        },
        "position": 0,
        "streamId": "2c86b72aabb58ab9e68832142d187988388cc0e21de517e2f84be2bdbb638306/001:14910503159376668675",
        "tags": Object {
          "bitrate": 7074423,
          "container format": "Matroska",
          "extended comment": "DURATION=01:58:49.122000000",
          "language code": "und",
          "video codec": "H264",
        },
        "type": "video",
        "width": 1920,
      },
      Object {
        "bitrate": 640000,
        "channels": 6,
        "codec": Object {
          "alignment": "frame",
          "channels": 6,
          "framed": true,
          "rate": 48000,
          "type": "audio/x-eac3",
        },
        "depth": 32,
        "id": 2,
        "language": "en",
        "maxBitrate": 0,
        "position": 0,
        "sampleRate": 48000,
        "streamId": "2c86b72aabb58ab9e68832142d187988388cc0e21de517e2f84be2bdbb638306/002:12895203282575461307",
        "tags": Object {
          "audio codec": "E-AC-3 audio",
          "bitrate": 640000,
          "container format": "Matroska",
          "extended comment": "DURATION=01:58:49.152000000",
          "language code": "en",
        },
        "type": "audio",
      },
      Object {
        "bitrate": 384000,
        "channels": 6,
        "codec": Object {
          "alignment": "frame",
          "channels": 6,
          "framed": true,
          "rate": 48000,
          "type": "audio/x-ac3",
        },
        "depth": 32,
        "id": 7,
        "language": "fr",
        "maxBitrate": 0,
        "position": 1,
        "sampleRate": 48000,
        "streamId": "2c86b72aabb58ab9e68832142d187988388cc0e21de517e2f84be2bdbb638306/007:714793849325566799",
        "tags": Object {
          "audio codec": "AC-3 audio",
          "bitrate": 384000,
          "container format": "Matroska",
          "extended comment": "DURATION=01:58:49.888000000",
          "language code": "fr",
        },
        "type": "audio",
      },
    ],
    "type": "container",
  },
  "480": Object {
    "location": "http://test.com/transco/test?type=container&preset=480&name=480.mp4",
    "name": "480.mp4",
    "preset": "480",
    "streams": Array [
      Object {
        "bitrate": 7074423,
        "codec": Object {
          "alignment": "au",
          "bit-depth-chroma": 8,
          "bit-depth-luma": 8,
          "chroma-format": "4:2:0",
          "codec_data": Object {
            "data": Array [
              1,
              100,
              0,
              40,
              255,
              225,
              0,
              42,
              103,
              100,
              0,
              40,
              172,
              217,
              64,
              120,
              2,
              39,
              229,
              192,
              90,
              128,
              128,
              128,
              160,
              0,
              0,
              125,
              32,
              0,
              23,
              112,
              28,
              64,
              0,
              2,
              98,
              90,
              0,
              0,
              29,
              205,
              101,
              209,
              70,
              0,
              241,
              131,
              25,
              96,
              1,
              0,
              5,
              104,
              233,
              59,
              60,
              143,
            ],
            "type": "Buffer",
          },
          "framerate": Object {
            "denom": 1001,
            "num": 24000,
          },
          "height": 1050,
          "interlace-mode": "progressive",
          "level": "4",
          "parsed": true,
          "pixel-aspect-ratio": Object {
            "denom": 1,
            "num": 1,
          },
          "profile": "high",
          "stream-format": "avc",
          "type": "video/x-h264",
          "width": 1920,
        },
        "depth": 24,
        "framerate": Object {
          "denom": 1001,
          "num": 24000,
        },
        "height": 1050,
        "id": 1,
        "image": false,
        "interlaced": false,
        "maxBitrate": 0,
        "pixelAspectRatio": Object {
          "denom": 1,
          "num": 1,
        },
        "position": 0,
        "streamId": "2c86b72aabb58ab9e68832142d187988388cc0e21de517e2f84be2bdbb638306/001:14910503159376668675",
        "tags": Object {
          "bitrate": 7074423,
          "container format": "Matroska",
          "extended comment": "DURATION=01:58:49.122000000",
          "language code": "und",
          "video codec": "H264",
        },
        "type": "video",
        "width": 1920,
      },
      Object {
        "bitrate": 640000,
        "channels": 6,
        "codec": Object {
          "alignment": "frame",
          "channels": 6,
          "framed": true,
          "rate": 48000,
          "type": "audio/x-eac3",
        },
        "depth": 32,
        "id": 2,
        "language": "en",
        "maxBitrate": 0,
        "position": 0,
        "sampleRate": 48000,
        "streamId": "2c86b72aabb58ab9e68832142d187988388cc0e21de517e2f84be2bdbb638306/002:12895203282575461307",
        "tags": Object {
          "audio codec": "E-AC-3 audio",
          "bitrate": 640000,
          "container format": "Matroska",
          "extended comment": "DURATION=01:58:49.152000000",
          "language code": "en",
        },
        "type": "audio",
      },
      Object {
        "bitrate": 384000,
        "channels": 6,
        "codec": Object {
          "alignment": "frame",
          "channels": 6,
          "framed": true,
          "rate": 48000,
          "type": "audio/x-ac3",
        },
        "depth": 32,
        "id": 7,
        "language": "fr",
        "maxBitrate": 0,
        "position": 1,
        "sampleRate": 48000,
        "streamId": "2c86b72aabb58ab9e68832142d187988388cc0e21de517e2f84be2bdbb638306/007:714793849325566799",
        "tags": Object {
          "audio codec": "AC-3 audio",
          "bitrate": 384000,
          "container format": "Matroska",
          "extended comment": "DURATION=01:58:49.888000000",
          "language code": "fr",
        },
        "type": "audio",
      },
    ],
    "type": "container",
  },
  "720": Object {
    "location": "http://test.com/transco/test?type=container&preset=720&name=720.mp4",
    "name": "720.mp4",
    "preset": "720",
    "streams": Array [
      Object {
        "bitrate": 7074423,
        "codec": Object {
          "alignment": "au",
          "bit-depth-chroma": 8,
          "bit-depth-luma": 8,
          "chroma-format": "4:2:0",
          "codec_data": Object {
            "data": Array [
              1,
              100,
              0,
              40,
              255,
              225,
              0,
              42,
              103,
              100,
              0,
              40,
              172,
              217,
              64,
              120,
              2,
              39,
              229,
              192,
              90,
              128,
              128,
              128,
              160,
              0,
              0,
              125,
              32,
              0,
              23,
              112,
              28,
              64,
              0,
              2,
              98,
              90,
              0,
              0,
              29,
              205,
              101,
              209,
              70,
              0,
              241,
              131,
              25,
              96,
              1,
              0,
              5,
              104,
              233,
              59,
              60,
              143,
            ],
            "type": "Buffer",
          },
          "framerate": Object {
            "denom": 1001,
            "num": 24000,
          },
          "height": 1050,
          "interlace-mode": "progressive",
          "level": "4",
          "parsed": true,
          "pixel-aspect-ratio": Object {
            "denom": 1,
            "num": 1,
          },
          "profile": "high",
          "stream-format": "avc",
          "type": "video/x-h264",
          "width": 1920,
        },
        "depth": 24,
        "framerate": Object {
          "denom": 1001,
          "num": 24000,
        },
        "height": 1050,
        "id": 1,
        "image": false,
        "interlaced": false,
        "maxBitrate": 0,
        "pixelAspectRatio": Object {
          "denom": 1,
          "num": 1,
        },
        "position": 0,
        "streamId": "2c86b72aabb58ab9e68832142d187988388cc0e21de517e2f84be2bdbb638306/001:14910503159376668675",
        "tags": Object {
          "bitrate": 7074423,
          "container format": "Matroska",
          "extended comment": "DURATION=01:58:49.122000000",
          "language code": "und",
          "video codec": "H264",
        },
        "type": "video",
        "width": 1920,
      },
      Object {
        "bitrate": 640000,
        "channels": 6,
        "codec": Object {
          "alignment": "frame",
          "channels": 6,
          "framed": true,
          "rate": 48000,
          "type": "audio/x-eac3",
        },
        "depth": 32,
        "id": 2,
        "language": "en",
        "maxBitrate": 0,
        "position": 0,
        "sampleRate": 48000,
        "streamId": "2c86b72aabb58ab9e68832142d187988388cc0e21de517e2f84be2bdbb638306/002:12895203282575461307",
        "tags": Object {
          "audio codec": "E-AC-3 audio",
          "bitrate": 640000,
          "container format": "Matroska",
          "extended comment": "DURATION=01:58:49.152000000",
          "language code": "en",
        },
        "type": "audio",
      },
      Object {
        "bitrate": 384000,
        "channels": 6,
        "codec": Object {
          "alignment": "frame",
          "channels": 6,
          "framed": true,
          "rate": 48000,
          "type": "audio/x-ac3",
        },
        "depth": 32,
        "id": 7,
        "language": "fr",
        "maxBitrate": 0,
        "position": 1,
        "sampleRate": 48000,
        "streamId": "2c86b72aabb58ab9e68832142d187988388cc0e21de517e2f84be2bdbb638306/007:714793849325566799",
        "tags": Object {
          "audio codec": "AC-3 audio",
          "bitrate": 384000,
          "container format": "Matroska",
          "extended comment": "DURATION=01:58:49.888000000",
          "language code": "fr",
        },
        "type": "audio",
      },
    ],
    "type": "container",
  },
  "subtitles": Array [
    Object {
      "location": "http://test.com/transco/test?type=subtitles&preset=subtitles&name=sub-0",
      "name": "sub-0",
      "preset": "subtitles",
      "stream": Object {
        "codec": Object {
          "format": "pango-markup",
          "type": "text/x-raw",
        },
        "id": 3,
        "language": "en",
        "position": 0,
        "streamId": "2c86b72aabb58ab9e68832142d187988388cc0e21de517e2f84be2bdbb638306/003:3338445907915957057",
        "tags": Object {
          "container format": "Matroska",
          "language code": "en",
        },
        "type": "subtitles",
      },
      "type": "subtitles",
    },
    Object {
      "location": "http://test.com/transco/test?type=subtitles&preset=subtitles&name=sub-1",
      "name": "sub-1",
      "preset": "subtitles",
      "stream": Object {
        "codec": Object {
          "format": "pango-markup",
          "type": "text/x-raw",
        },
        "id": 4,
        "language": "en",
        "position": 1,
        "streamId": "2c86b72aabb58ab9e68832142d187988388cc0e21de517e2f84be2bdbb638306/004:11425696843242394066",
        "tags": Object {
          "container format": "Matroska",
          "language code": "en",
        },
        "type": "subtitles",
      },
      "type": "subtitles",
    },
    Object {
      "location": "http://test.com/transco/test?type=subtitles&preset=subtitles&name=sub-2",
      "name": "sub-2",
      "preset": "subtitles",
      "stream": Object {
        "codec": Object {
          "format": "pango-markup",
          "type": "text/x-raw",
        },
        "id": 5,
        "language": "fr",
        "position": 2,
        "streamId": "2c86b72aabb58ab9e68832142d187988388cc0e21de517e2f84be2bdbb638306/005:16093836354305151439",
        "tags": Object {
          "container format": "Matroska",
          "language code": "fr",
        },
        "type": "subtitles",
      },
      "type": "subtitles",
    },
    Object {
      "location": "http://test.com/transco/test?type=subtitles&preset=subtitles&name=sub-3",
      "name": "sub-3",
      "preset": "subtitles",
      "stream": Object {
        "codec": Object {
          "format": "pango-markup",
          "type": "text/x-raw",
        },
        "id": 6,
        "language": "fr",
        "position": 3,
        "streamId": "2c86b72aabb58ab9e68832142d187988388cc0e21de517e2f84be2bdbb638306/006:6273201014077715892",
        "tags": Object {
          "container format": "Matroska",
          "language code": "fr",
        },
        "type": "subtitles",
      },
      "type": "subtitles",
    },
  ],
}
`;
